vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__entity_entity_aspect_entity.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::entity_aspect, \"entity lib.foo.name\",)"
---
EntityEntityAspect
  Keyword(Entity)
  Name
    NameDesignatorPrefix
      Identifier 'lib'
    SelectedName
      Dot
      Identifier 'foo'
    SelectedName
      Dot
      Identifier 'name'
