vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__entity_entity_aspect_open.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::entity_aspect, \"open\",)"
---
EntityOpenAspect
  Keyword(Open)
