vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__repro.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of ent is\n    for name\n        for i, i : name;\n        end for;\n    end for;\nend;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'ent'
    Keyword(Is)
  BlockConfiguration
    BlockConfigurationPreamble
      Keyword(For)
      Name
        NameDesignatorPrefix
          Identifier 'name'
    ComponentConfiguration
      ComponentConfigurationPreamble
        Keyword(For)
        ComponentSpecification
          InstantiationListList
            Identifier 'i'
            Comma
            Identifier 'i'
          Colon
          Name
            NameDesignatorPrefix
              Identifier 'name'
      Binding
        SemiColon
      ComponentConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    BlockConfigurationEpilogue
      Keyword(End)
      Keyword(For)
      SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    SemiColon
