vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__simple_configuration_specification_end_for.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_specification,\n\"for all : lib.pkg.comp use entity work.foo(rtl); end for;\",)"
---
SimpleConfigurationSpecification
  ComponentConfigurationPreamble
    Keyword(For)
    ComponentSpecification
      InstantiationListAll
        Keyword(All)
      Colon
      Name
        NameDesignatorPrefix
          Identifier 'lib'
        SelectedName
          Dot
          Identifier 'pkg'
        SelectedName
          Dot
          Identifier 'comp'
  BindingIndication
    BindingUseClause
      Keyword(Use)
      EntityEntityAspect
        Keyword(Entity)
        Name
          NameDesignatorPrefix
            Identifier 'work'
          SelectedName
            Dot
            Identifier 'foo'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    NameExpression
                      Name
                        NameDesignatorPrefix
                          Identifier 'rtl'
            RightPar
  SemiColon
  ComponentConfigurationEpilogue
    Keyword(End)
    Keyword(For)
    SemiColon
